# mc-integrate-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  amalgamate.sh  build.sh  mc_integrate_cpp.hpp  test  test.sh
.github/workflows/: ci.yml
examples/: CMakeLists.txt  README.md  ising  ising.cpp  notebooks_Ising.ipynb  sample_mcmc.hpp
include/: common.hpp  estimators.hpp  integrate.hpp  integrate_mc.hpp  integrate_mc_omp.hpp  integrate_quadrature.hpp  sample.hpp  sample_area.hpp  sample_bin.hpp  sample_mcmc.hpp  sample_mcmc_ndim.hpp  sample_mcmc_system.hpp  utils.hpp
src/: integrate.cpp  integrate_mc.cpp  integrate_mc_omp.cpp  integrate_quadrature.cpp  sample.cpp  utils.cpp
src/omp/: integrate_mc.cpp
tests/: test_integrate.cpp  test_integrate_mc.cpp  test_integrate_mc_omp.cpp  test_integrate_quadrature.cpp  test_sample.cpp  utils.hpp
